foreach(prog findmeastable)
    add_executable (${prog}  ${prog}.cc)
    add_pch_support(${prog})
    target_link_libraries (${prog} casa_measures ${CASACORE_ARCH_LIBS})
    install(TARGETS ${prog} DESTINATION bin)
endforeach(prog findmeastable)

add_executable (measuresdata  measuresdata/measuresdata.cc)
target_link_libraries (measuresdata casa_measures ${CASACORE_ARCH_LIBS})
install(TARGETS measuresdata DESTINATION ${CMAKE_INSTALL_BINDIR})
install(PROGRAMS measuresdata/measuresdata-update DESTINATION bin)
