foreach(prog findmeastable)
    add_executable (${prog}  ${prog}.cc)
    add_pch_support(${prog})
    target_link_libraries (${prog} casa_measures ${CASACORE_ARCH_LIBS})
    install(TARGETS ${prog})
endforeach(prog findmeastable)

add_executable (measuresdata  measuresdata/measuresdata.cc)
target_link_libraries (measuresdata casa_measures ${CASACORE_ARCH_LIBS})
install(TARGETS measuresdata)
install(PROGRAMS measuresdata/measuresdata-update TYPE BIN)
