foreach(prog msselect writems readms)
    add_executable (${prog}  ${prog}.cc)
    add_pch_support(${prog})
    target_link_libraries (${prog} casa_ms ${CASACORE_ARCH_LIBS})
    if(MPI_FOUND)
        target_compile_definitions(${prog} PRIVATE HAVE_MPI)
        if(ADIOS2_FOUND)
            target_compile_definitions(${prog} PRIVATE HAVE_ADIOS2)
            target_include_directories(${prog} PRIVATE ${ADIOS2_INCLUDE_DIRS})
        endif(ADIOS2_FOUND)
    endif(MPI_FOUND)
    install(TARGETS ${prog} DESTINATION bin)
endforeach(prog msselect)
